--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "npm run copy-lib && docusaurus start",
-    "build": "npm run copy-lib && docusaurus build",
+    "start": "npm run copy-lib && npm run generate-api && docusaurus start",
+    "build": "npm run copy-lib && npm run generate-api && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -19,9 +19,9 @@
     "generate-version": "npm run generate-api && npm run copy-lib && node ./scripts/generate-version.mjs"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-rc.1",
-    "@docusaurus/preset-classic": "2.0.0-rc.1",
-    "@docusaurus/theme-live-codeblock": "^2.0.0-rc.1",
+    "@docusaurus/core": "^2.0.1",
+    "@docusaurus/preset-classic": "^2.0.1",
+    "@docusaurus/theme-live-codeblock": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
     "@siemens/ix": "*",
     "@siemens/ix-react": "*",
@@ -35,7 +35,7 @@
     "react-toastify": "^9.0.7"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-rc.1",
+    "@docusaurus/module-type-aliases": "^2.0.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4"
