--- a/packages/aggrid/package.json
+++ b/packages/aggrid/package.json
@@ -1,13 +1,43 @@
 {
   "name": "@siemens/ix-aggrid",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.js",
+  "es2015": "dist/esm/index.mjs",
+  "es2017": "dist/esm/index.mjs",
+  "types": "dist/types/index.d.ts",
+  "collection": "dist/collection/collection-manifest.json",
+  "collection:main": "dist/collection/index.js",
+  "unpkg": "dist/aggrid/aggrid.esm.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ionic-team/stencil-component-starter.git"
+  },
+  "files": [
+    "dist/",
+    "loader/"
+  ],
   "scripts": {
-    "test": "node index.js"
+    "build": "stencil build --docs",
+    "start": "stencil build --dev --watch --serve",
+    "test": "stencil test --spec --e2e",
+    "test.watch": "stencil test --spec --e2e --watchAll",
+    "generate": "stencil generate"
+  },
+  "dependencies": {
+    "@stencil/core": "^2.13.0"
   },
   "devDependencies": {
-    "ag-grid-community": "^28.0.2"
+    "@types/jest": "^27.0.3",
+    "jest": "^27.4.5",
+    "jest-cli": "^27.4.5",
+    "puppeteer": "^10.0.0",
+    "ag-grid-community": "^28.0.2",
+    "@stencil/sass": "~1.5.2"
   },
   "peerDependencies": {
-    "ag-grid-community": "^28.0.2"
-  }
+    "ag-grid-community": "^28.0.2",
+    "@siemens/ix": "^0.0.0"
+  },
+  "license": "MIT"
 }
