--- a/packages/documentation/.gitignore
+++ b/packages/documentation/.gitignore
@@ -23,3 +23,4 @@ yarn-error.log*
 
 static/webcomponent-examples/lib/core-ui-icons
 static/webcomponent-examples/lib/ix
+static/webcomponent-examples/lib/ix-aggrid
