--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -23,8 +23,8 @@
     "@docusaurus/preset-classic": "^2.0.1",
     "@docusaurus/theme-live-codeblock": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
-    "@siemens/ix": "*",
-    "@siemens/ix-react": "*",
+    "@siemens/ix": "./../core",
+    "@siemens/ix-react": "./../react",
     "@stencil/postcss": "^2.1.0",
     "clsx": "^1.2.1",
     "execa": "^5.1.1",
