--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -11,24 +11,22 @@
   "scripts": {
     "build": "npm run clean && npm run compile",
     "clean": "rimraf dist && rimraf dist-transpiled",
-    "compile": "npm run tsc && rollup -c",
+    "compile": "rollup -c",
     "tsc": "tsc -p ."
   },
   "author": "",
   "license": "Siemens Inner Source License v1.4",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-typescript": "^8.4.0",
     "@siemens/ix": "~0.0.0",
+    "@types/estree": "~0.0.51",
     "@types/react": "~18.0.15",
     "@types/react-dom": "~18.0.6",
-    "@types/estree": "~0.0.51",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.67.2",
-    "rollup-plugin-dts": "^4.1.0",
+    "rollup": "^2.78.1",
+    "rollup-plugin-dts": "^4.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
