--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -9,7 +9,7 @@
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
-    "rimraf": "rimraf ./static/webcomponent-examples/lib/ix && rimraf ./static/webcomponent-examples/lib/core-ui-icons",
+    "rimraf": "rimraf ./static/webcomponent-examples/lib/ix && rimraf ./static/webcomponent-examples/lib/core-ui-icons && rimraf ./static/webcomponent-examples/lib/ix-aggrid",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
@@ -23,8 +23,8 @@
     "@docusaurus/preset-classic": "^2.0.1",
     "@docusaurus/theme-live-codeblock": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
-    "@siemens/ix": "./../core",
-    "@siemens/ix-react": "./../react",
+    "@siemens/ix": "*",
+    "@siemens/ix-react": "*",
     "@stencil/postcss": "^2.1.0",
     "clsx": "^1.2.1",
     "execa": "^5.1.1",
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.1",
     "@tsconfig/docusaurus": "^1.0.5",
+    "@types/fs-extra": "^9.0.13",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4"
   },
