--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -18,7 +18,7 @@
   "license": "Siemens Inner Source License v1.4",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.4.0",
-    "@siemens/ix": "~0.0.0",
+    "@siemens/ix": "*",
     "@types/estree": "~0.0.51",
     "@types/react": "~18.0.15",
     "@types/react-dom": "~18.0.6",
@@ -37,8 +37,8 @@
     "react-dom": ">=17.0.2"
   },
   "dependencies": {
-    "@siemens/core-ui-icons": "~1.1.16",
-    "@siemens/ix": "~0.0.0"
+    "@siemens/core-ui-icons": "~1.1.17",
+    "@siemens/ix": "*"
   },
   "publishConfig": {
     "registry": "***REMOVED***"
