--- a/tools/tsconfig.tools.json
+++ b/tools/tsconfig.tools.json
@@ -1,12 +1,16 @@
 {
-  "extends": "../tsconfig.base.json",
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": "../dist/out-tsc/tools",
     "rootDir": ".",
     "module": "commonjs",
     "target": "es5",
-    "types": ["node"],
+    "types": [
+      "node"
+    ],
     "importHelpers": false
   },
-  "include": ["**/*.ts"]
+  "include": [
+    "**/*.ts"
+  ]
 }
