--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ix",
-  "version": "0.0.0",
+  "version": "1.0.0-beta.0",
   "license": "MIT",
   "scripts": {
     "docs": "npm run build:lib && nx run documentation:start",
