--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "documentation",
-  "version": "0.0.0",
+  "version": "1.0.0-beta.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
