feat(docs): updated package.json

--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -24,8 +24,8 @@
     "@docusaurus/theme-live-codeblock": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
     "@siemens/ix-icons": "1.0.0-beta.1",
-    "@siemens/ix": "*",
-    "@siemens/ix-react": "*",
+    "@siemens/ix": "~1.0.0-beta.0",
+    "@siemens/ix-react": "~1.0.0-beta.0",
     "@stencil/postcss": "^2.1.0",
     "clsx": "^1.2.1",
     "execa": "^5.1.1",
