--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -9,7 +9,7 @@
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
-    "rimraf": "rimraf ./static/webcomponent-examples/lib/ix && rimraf ./static/webcomponent-examples/lib/core-ui-icons && rimraf ./static/webcomponent-examples/lib/ix-aggrid",
+    "rimraf": "rimraf ./static/webcomponent-examples/lib/ix && rimraf ./static/webcomponent-examples/lib/ix-brand-theme && rimraf ./static/webcomponent-examples/lib/core-ui-icons && rimraf ./static/webcomponent-examples/lib/ix-aggrid",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
