feat: use brand-theme optional in core and docs

--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -25,7 +25,6 @@
     "@mdx-js/react": "^1.6.22",
     "@siemens/ix-icons": "1.0.0-beta.1",
     "@siemens/ix": "~1.0.0-beta.0",
-    "@siemens/ix-brand-theme": "~1.0.0-beta.0",
     "@siemens/ix-react": "~1.0.0-beta.0",
     "@stencil/postcss": "^2.1.0",
     "clsx": "^1.2.1",
@@ -42,6 +41,9 @@
     "@types/fs-extra": "^9.0.13",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4"
+  },
+  "optionalDependencies": {
+    "@siemens/ix-brand-theme": "~1.0.0-beta.0"
   },
   "browserslist": {
     "production": [
