--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -79,6 +79,9 @@
     "@popperjs/core": "^2.11.0",
     "bootstrap": "~5.2.0"
   },
+  "optionalDependencies": {
+    "@siemens/ix-brand-theme": "~1.0.0-beta.0"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
