--- a/packages/documentation/tsconfig.json
+++ b/packages/documentation/tsconfig.json
@@ -5,7 +5,8 @@
     "esModuleInterop": true,
     "jsx": "react",
     "lib": [
-      "DOM"
+      "DOM",
+      "ES2022"
     ],
     "noEmit": true,
     "noImplicitAny": false,
