--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://www.github.com/siemens/ix.git"
   },
   "bugs": {
-    "url": "https://www.github.com/siemens/ix/-/issues"
+    "url": "https://www.github.com/siemens/ix/issues"
   },
   "packageManager": "yarn@1.22.15",
   "engines": {
