feat(echarts): add echarts theme as standalone package

--- a/packages/documentation/.gitignore
+++ b/packages/documentation/.gitignore
@@ -21,7 +21,5 @@ yarn-error.log*
 
 # Previews
 
-static/webcomponent-examples/lib/ix-icons
-static/webcomponent-examples/lib/ix
-static/webcomponent-examples/lib/ix-aggrid
-static/webcomponent-examples/lib/ix-brand-theme
+static/webcomponent-examples/lib/**/*
+!static/webcomponent-examples/lib/utils
