--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "start": "turbo run start",
     "clean": "npx rimraf ./**/node_modules",
     "turbo": "turbo",
+    "lint": "turbo run lint",
     "generate-documentation-version": "yarn workspace documentation run generate-version",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "release": "node ./scripts/release.js",
