--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -22,6 +22,6 @@
     "@siemens/ix": "~1.0.0-beta.1",
     "fs-extra": "^10.1.0",
     "ng-packagr": "^14.2.0",
-    "typescript": "^4.7.4"
+    "typescript": "4.7.2"
   }
 }
