--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,11 @@ jobs:
       - run: |
           echo "github.ref = ${{ github.ref }}"
           echo "github.sha = ${{ github.sha }}"
+
       - uses: actions/checkout@v3
+
+      - uses: ./.github/workflows/actions/install
+
       - uses: ./.github/workflows/actions/build
+
       # - uses: ./.github/workflows/actions/test
