--- a/.github/workflows/actions/test/action.yml
+++ b/.github/workflows/actions/test/action.yml
@@ -3,6 +3,21 @@ description: 'Test if all svg files are generated to dist'
 runs:
   using: 'composite'
   steps:
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 16
+        registry-url: 'https://registry.npmjs.org'
+        scope: '@siemens'
+
+    - uses: actions/cache@v2
+      id: cache
+      with:
+        key: yarn-modules-${{ hashFiles('yarn.lock') }}
+        path: |
+          .yarn-cache
+          node_modules
+          packages/**/node_modules
+
     - name: test
-      run: yarn test
+      run: yarn run test
       shell: bash
