--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+  install:
     runs-on: ubuntu-latest
     container:
       image: node:16.16.0
@@ -17,16 +17,23 @@ jobs:
       - run: |
           echo "github.ref = ${{ github.ref }}"
           echo "github.sha = ${{ github.sha }}"
-
       - uses: actions/checkout@v3
-
       - uses: ./.github/workflows/actions/install
 
+  build:
+    runs-on: ubuntu-latest
+    needs: [install]
+    container:
+      image: node:16.16.0
+      env:
+        DEBIAN_FRONTEND: noninteractive
+    steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/workflows/actions/build
 
   test:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [install]
     container:
       image: node:16.16.0
       env:
