ci(actions/test): add checkout action

--- a/.github/workflows/actions/test/action.yml
+++ b/.github/workflows/actions/test/action.yml
@@ -1,5 +1,5 @@
-name: 'Test Icons'
-description: 'Test if all svg files are generated to dist'
+name: 'Execute unit tests'
+description: 'Execute unit tests'
 runs:
   using: 'composite'
   steps:
