--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,3 +41,44 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/actions/test
+
+  visual-regression:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        id: cache
+        with:
+          key: yarn-modules-${{ hashFiles('yarn.lock') }}
+          path: |
+            .yarn-cache
+            node_modules
+            packages/**/node_modules
+      - uses: actions/download-artifact@v2
+        with:
+          name: build
+      - name: Install Playwright Browsers
+        run: npx playwright install chromium --with-deps
+      - name: Run Playwright tests
+        run: yarn workspace @siemens/ix run test:e2e
+      - uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 2
+
+  lint-commit-message:
+    runs-on: ubuntu-latest
+    needs: [install]
+    container:
+      image: node:16.16.0
+      env:
+        DEBIAN_FRONTEND: noninteractive
+    steps:
+      - uses: actions/checkout@v3
+      - name: Validate all commits from PR
+        if: github.event_name == 'pull_request'
+        run: yarn commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
