--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,6 @@ jobs:
       - uses: ./.github/workflows/actions/install
 
   build:
-    timeout-minutes: 60
     runs-on: ubuntu-latest
     needs: [install]
     container:
@@ -31,6 +30,35 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/workflows/actions/build
+      - uses: actions/cache@v2
+        id: build
+        with:
+          key: build-${{ github.sha }}
+          path: |
+            packages/**/dist
+            packages/**/www
+            packages/**/loader
+            packages/**/build
+
+  visual-test:
+    needs: [build]
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.24.0-focal
+      env:
+        DEBIAN_FRONTEND: noninteractive
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v2
+        id: build
+        with:
+          key: build-${{ github.sha }}
+          path: |
+            packages/**/dist
+            packages/**/www
+            packages/**/loader
+            packages/**/build
       - uses: ./.github/workflows/actions/visual-regression
 
   test:
