ci(action/visual-regression): install playwright global

--- a/.github/workflows/actions/visual-regression/action.yml
+++ b/.github/workflows/actions/visual-regression/action.yml
@@ -3,6 +3,10 @@ description: 'Execute visual regression tests'
 runs:
   using: 'composite'
   steps:
+    - name: Install Playwright
+      run: yarn global add playwright
+      shell: bash
+
     - name: Install Playwright Browsers
       run: yarn playwright install chromium --with-deps
       shell: bash
