ci(action/visual-regression): remove arg from install

--- a/.github/workflows/actions/visual-regression/action.yml
+++ b/.github/workflows/actions/visual-regression/action.yml
@@ -3,12 +3,8 @@ description: 'Execute visual regression tests'
 runs:
   using: 'composite'
   steps:
-    - name: Install Playwright
-      run: yarn global add playwright
-      shell: bash
-
     - name: Install Playwright Browsers
-      run: playwright install chromium --with-deps
+      run: yarn playwright install chromium
       shell: bash
 
     - name: Run Playwright tests
