ci: add install cache

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,7 @@ jobs:
             packages/**/www
             packages/**/loader
             packages/**/build
+      - uses: ./.github/workflows/actions/install
       - uses: ./.github/workflows/actions/visual-regression
 
   test:
