--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,4 +85,4 @@ jobs:
       - uses: ./.github/workflows/actions/install
       - name: Validate all commits from PR
         if: github.event_name == 'pull_request'
-        run: yarn commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+        run: yarn commitlint --from ${{ github.event.pull_request.base.sha }} --verbose
