chore: move ignore parts to root level

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+packages/documentation/static/webcomponent-examples/lib/**/*
+!packages/documentation/static/webcomponent-examples/lib/utils
