ci(workflow/publish): fix use import

--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -12,7 +12,7 @@ concurrency:
 
 jobs:
   build-lib:
-    uses: .github/workflows/build.yml@main
+    uses: ./.github/workflows/build.yml@main
   deploy:
     needs: [build-lib]
     runs-on: ubuntu-latest
