--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -1,10 +1,6 @@
 name: pre-publish
 
-on:
-  workflow_dispatch:
-  push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+'
+on: workflow_dispatch
 
 concurrency:
   group: prepublish-${{ github.sha }}
