--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -8,7 +8,7 @@ concurrency:
 
 jobs:
   build-lib:
-    uses: ./.github/workflows/build.yml@main
+    uses: ./.github/workflows/build.yml
   deploy:
     needs: [build-lib]
     runs-on: ubuntu-latest
