--- a/.github/workflows/actions/visual-regression/action.yml
+++ b/.github/workflows/actions/visual-regression/action.yml
@@ -15,5 +15,5 @@ runs:
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
+        path: ./packages/core/playwright-report/
         retention-days: 2
