ci(workflow/deploy-pages): remove with block

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -16,11 +16,9 @@ jobs:
       - name: 'Install brand theme'
         run: |
           echo "@siemens:registry=https://captain.rtf.siemens.net/artifactory/api/npm/siemens-npm/" >> .npmrc
-          echo "//code.siemens.com/api/v4/projects/249177/packages/npm/:_authToken=${READ_CSC_TOKEN}" >> .npmrc
+          echo "//code.siemens.com/api/v4/projects/249177/packages/npm/:_authToken=${{ secrets.READ_CSC_TOKEN }}" >> .npmrc
           yarn workspace documentation add @siemens/ix-brand-theme --dev
           rm .npmrc
-        with:
-          READ_CSC_TOKEN: ${{ secrets.READ_CSC_TOKEN }}
 
       - uses: ./.github/workflows/actions/build
       - name: Deploy to GitHub Pages
