--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           echo "@siemens:registry=https://code.siemens.com/api/v4/projects/249177/packages/npm/" > .npmrc
           echo "//code.siemens.com/api/v4/projects/249177/packages/npm/:_authToken=${{ secrets.READ_CSC_TOKEN }}" >> .npmrc
-          yarn workspace documentation add @siemens/ix-brand-theme --dev
+          yarn workspace documentation add @siemens/ix-brand-theme --dev --registry https://code.siemens.com/api/v4/projects/249177/packages/npm/
           rm .npmrc
 
       - uses: ./.github/workflows/actions/build
