--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -18,6 +18,7 @@ jobs:
           echo "registry=https://code.siemens.com/api/v4/projects/249177/packages/npm/" > .npmrc
           echo "@siemens:registry=https://code.siemens.com/api/v4/projects/249177/packages/npm/" >> .npmrc
           echo "//code.siemens.com/api/v4/projects/249177/packages/npm/:_authToken=${{ secrets.READ_CSC_TOKEN }}" >> .npmrc
+          cat .npmrc
           yarn workspace documentation add @siemens/ix-brand-theme --dev --registry https://code.siemens.com/api/v4/projects/249177/packages/npm/
           rm .npmrc
 
