--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -21,7 +21,7 @@ jobs:
           echo "//code.siemens.com/api/v4/projects/249177/packages/npm/:_authToken=${{ secrets.READ_CSC_TOKEN }}" >> .npmrc
           cat .npmrc
           ls -la .
-          yarn workspace documentation add @siemens/ix-brand-theme --dev --registry https://code.siemens.com/api/v4/projects/249177/packages/npm/
+          npm install @siemens/ix-brand-theme --no-save
           rm .npmrc
 
       - uses: ./.github/workflows/actions/build
