ci: remove static gitignore

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -20,6 +20,7 @@ jobs:
           echo "//code.siemens.com/api/v4/projects/249177/packages/npm/:_authToken=${{ secrets.READ_CSC_TOKEN }}" >> .npmrc
           npm install @siemens/ix-brand-theme --no-save
           rm .npmrc
+          rm ./packages/documentation/.gitignore
 
       - uses: ./.github/workflows/actions/build
       - name: Deploy to GitHub Pages
@@ -27,4 +28,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./packages/documentation/build
-          exclude_assets: './packages/documentation/.gitignore'
