--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -16,18 +16,18 @@ jobs:
       - uses: ./.github/workflows/actions/build
         with:
           filter: '\!documentation'
-      # - name: 'Install brand theme'
-      #   run: |
-      #     rm .yarnrc
-      #     echo "@siemens:registry=https://code.siemens.com/api/v4/projects/249177/packages/npm/" >> .npmrc
-      #     echo "//code.siemens.com/api/v4/projects/249177/packages/npm/:_authToken=${{ secrets.READ_CSC_TOKEN }}" >> .npmrc
-      #     npm install @siemens/ix-brand-theme --no-save
-      #     rm .npmrc
-      #     rm ./packages/documentation/static/.gitignore
+      - name: 'Install brand theme'
+        run: |
+          rm .yarnrc
+          echo "@siemens:registry=https://code.siemens.com/api/v4/projects/249177/packages/npm/" >> .npmrc
+          echo "//code.siemens.com/api/v4/projects/249177/packages/npm/:_authToken=${{ secrets.READ_CSC_TOKEN }}" >> .npmrc
+          npm install @siemens/ix-brand-theme --no-save
+          rm .npmrc
+          rm ./packages/documentation/static/.gitignore
 
-      - uses: ./.github/workflows/actions/build
-        with:
-          filter: 'documentation'
+      - name: 'Build documentation'
+        run: |
+          yarn workspace documentation run build
       - name: 'Copy documentation'
         run: |
           cp -R ./packages/documentation/build/. ./public
