--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -23,7 +23,7 @@
     "@docusaurus/preset-classic": "^2.1.0",
     "@docusaurus/theme-live-codeblock": "^2.1.0",
     "@mdx-js/react": "^1.6.22",
-    "@siemens/ix-icons": "1.0.0-beta.3",
+    "@siemens/ix-icons": "~1.0.0",
     "@siemens/ix": "~1.0.0-beta.2",
     "@siemens/ix-react": "~1.0.0-beta.2",
     "@siemens/ix-echarts": "~1.0.0-beta.2",
