--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -37,7 +37,7 @@
     "react-dom": ">=17.0.2"
   },
   "dependencies": {
-    "@siemens/ix-icons": "~1.0.0-beta.3",
+    "@siemens/ix-icons": "~1.0.0",
     "@siemens/ix": "~1.0.0-beta.2"
   }
 }
