--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -76,13 +76,7 @@
   },
   "peerDependencies": {
     "@popperjs/core": "^2.11.0",
-    "bootstrap": "~5.2.0",
-    "@siemens/ix-brand-theme": "~1.0.0-beta.1"
-  },
-  "peerDependenciesMeta": {
-    "@siemens/ix-brand-theme": {
-      "optional": true
-    }
+    "bootstrap": "~5.2.0"
   },
   "config": {
     "commitizen": {
