--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,9 @@
     "scss/"
   ],
   "scripts": {
+    "postinstall": "node ./dist/postinstall/post-install.js",
     "build": "stencil build --docs --prod",
+    "postbuild": "yarn build:postinstall",
     "build:dev": "stencil build --docs",
     "lint": "eslint src/**/*{.ts,.tsx}",
     "start": "stencil build --dev --watch --serve",
@@ -31,7 +33,8 @@
     "playwright.docker": "docker run --rm --network host -v $(pwd):/work/ -w /work/packages/core -it mcr.microsoft.com/playwright:v1.24.0-focal /bin/bash",
     "host-root": "http-server ./ -a 127.0.0.1 -p 8080",
     "generate": "stencil generate",
-    "generate:theme": "ts-node -P ./scripts/generate-theme/tsconfig.json ./scripts/generate-theme/generate-theme"
+    "generate:theme": "ts-node -P ./scripts/generate-theme/tsconfig.json ./scripts/generate-theme/generate-theme",
+    "build:postinstall": "rollup -c ./scripts/post-install/rollup.config.js"
   },
   "dependencies": {
     "@stencil/core": "~2.15.0",
@@ -54,6 +57,7 @@
     "@types/jest": "^27.0.3",
     "@types/luxon": "^3.0.0",
     "@types/mustache": "^4.1.1",
+    "@types/node": "^18.8.2",
     "@types/puppeteer": "^5.4.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
