--- a/.github/workflows/actions/install/action.yml
+++ b/.github/workflows/actions/install/action.yml
@@ -22,7 +22,7 @@ runs:
     - uses: actions/cache@v2
       id: cache
       with:
-        key: yarn-modules-${{ hashFiles('yarn.lock') }}
+        key: yarn-${{ runner.os }}-modules-${{ hashFiles('yarn.lock') }}
         path: |
           .yarn-cache
           node_modules
