--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/cache@v2
         id: build
         with:
-          key: build-${{ github.sha }}
+          key: build-${{ runner.os }}-${{ github.sha }}
           path: |
             packages/**/dist
             packages/**/www
@@ -53,7 +53,7 @@ jobs:
       - uses: actions/cache@v2
         id: build
         with:
-          key: build-${{ github.sha }}
+          key: build-${{ runner.os }}-${{ github.sha }}
           path: |
             packages/**/dist
             packages/**/www
