--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/cache@v2
         id: build
         with:
-          key: build-${{ github.sha }}
+          key: build-${{ runner.os }}-${{ github.sha }}
           path: |
             packages/**/dist
             packages/**/www
