--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -33,10 +33,11 @@ jobs:
       - name: Publish beta version to npmjs.org
         run: |
           yarn workspace @siemens/ix publish --access public --tag beta
-          yarn workspace @siemens/ix-angular publish --access public --tag beta
           yarn workspace @siemens/ix-react publish --access public --tag beta
           yarn workspace @siemens/ix-aggrid publish --access public --tag beta
           yarn workspace @siemens/ix-echarts publish --access public --tag beta
+          cd packages/angular/dist
+          yarn publish --access public --tag beta
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
