--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -27,6 +27,7 @@
     "@siemens/ix": "~1.0.0",
     "@siemens/ix-react": "~1.0.0",
     "@siemens/ix-echarts": "~1.0.0",
+    "html-test-app": "~1.0.0",
     "@stencil/postcss": "^2.1.0",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.2",
